[Vietnamese Lunar Calendar] Fix midnight JDE rounding in getLocalDayIndex

The `+ 0.5` offset intended to shift the Julian Date reference point from noon
to local midnight (UTC+7) was placed outside `std::floor()`, making it a no-op by
the `qint64` cast. This caused `getLocalDayIndex` to return the previous day for
any astronomical event occurring between local midnight and noon, shifting the
lunar day count one too high.

Quite frankly, it is embarrassing that I missed this.

BUG: 522099


(cherry picked from commit 3b380dd8c1881fde131675ce852bd93384e5e71b)

Co-authored-by: Trần Nam Tuấn <tuantran1632001@gmail.com>